# snomed-ecl-rust

./: Cargo.toml  README.md
crates/snomed-ecl/: Cargo.toml
crates/snomed-ecl-executor/: Cargo.toml
crates/snomed-ecl-executor/src/: cache.rs  config.rs  error.rs  executor.rs  lib.rs  planner.rs  result.rs  statistics.rs  traits.rs  traverser.rs
crates/snomed-ecl-executor/tests/: filter_tests.rs  integration_tests.rs  syntax_tests.rs
crates/snomed-ecl-optimizer/: Cargo.toml
crates/snomed-ecl-optimizer/src/: error.rs  lib.rs
crates/snomed-ecl-optimizer/src/bitset/: mod.rs  registry.rs
crates/snomed-ecl-optimizer/src/closure/: mod.rs  stats.rs
crates/snomed-ecl-optimizer/src/persistence/: manifest.rs  mod.rs
crates/snomed-ecl-optimizer/src/service/: mod.rs  types.rs
crates/snomed-ecl/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/snomed-ecl/src/expression/: ast.rs  builder.rs  formatter.rs  mod.rs
docs/: ECL_COMPLIANCE_GAPS.md  ECL_IMPLEMENTATION_CHECKLIST.md  INTEGRATION_GUIDE.md
docs/executor/: README.md  TRAIT.md  USAGE.md
docs/optimizer/: README.md
docs/parser/: FILTERS.md  README.md  SYNTAX.md  USAGE.md
