[workspace]
resolver = "2"
members = [
    "crates/snomed-ecl",
    "crates/snomed-ecl-executor",
    "crates/snomed-ecl-optimizer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shehanm83/snomed-ecl-rust"
keywords = ["snomed", "ecl", "healthcare", "terminology", "clinical"]
categories = ["parsing", "science"]

[workspace.dependencies]
# Internal crates
snomed-ecl = { path = "crates/snomed-ecl" }
snomed-ecl-executor = { path = "crates/snomed-ecl-executor" }
snomed-ecl-optimizer = { path = "crates/snomed-ecl-optimizer" }

# No external dependencies - this workspace is fully self-contained.
# SctId is defined in snomed-ecl crate (pub type SctId = u64).

# Parsing
nom = "7.1"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Collections
hashbrown = "0.14"

# Parallelism (optional)
rayon = "1.10"

# Caching
lru = "0.12"

# Testing
criterion = "0.5"
tempfile = "3.15"

# Optimizer crate dependencies (optional features)
roaring = "0.10"
bincode = "2.0"
sha2 = "0.10"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
