[package]
name = "snomed-ecl-executor"
version.workspace = true
edition.workspace = true
description = "High-performance ECL execution engine for SNOMED CT"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shehanm83/snomed-ecl-rust"
keywords = ["snomed", "ecl", "healthcare", "terminology"]
categories = ["science", "parsing"]

[lib]
name = "snomed_ecl_executor"
path = "src/lib.rs"

[dependencies]
# Internal crates (SNOMED infrastructure)
snomed-types = { workspace = true }
snomed-ecl = { workspace = true }
# NOTE: snomed-loader is NOT a dependency here to avoid cyclic dependencies.
# The EclQueryable trait is defined here, but implementations for concrete
# store types (like SnomedStore) should be done in the consuming crate
# (e.g., snomed-service).

# Core dependencies
thiserror = { workspace = true }
lru = { workspace = true }

# Optional parallel execution
rayon = { workspace = true, optional = true }

[features]
default = []
parallel = ["rayon"]
serde = ["snomed-types/serde", "snomed-ecl/serde"]

[dev-dependencies]
# criterion = { workspace = true }  # Enable when benchmarks are added
