[package]
name = "snomed-ecl-optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Performance optimizations for snomed-ecl-executor"
keywords = ["snomed", "ecl", "optimization", "healthcare", "performance"]
categories = ["science", "caching"]

[lib]
name = "snomed_ecl_optimizer"
path = "src/lib.rs"

[dependencies]
# Core dependencies (always included)
snomed-ecl = { workspace = true }
snomed-ecl-executor = { workspace = true }
thiserror = { workspace = true }

# Feature-gated dependencies
roaring = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
lru = { workspace = true, optional = true }

[features]
default = []

# Transitive closure for O(1) ancestor/descendant lookup
closure = []

# Roaring bitmap-based concept sets
bitset = ["dep:roaring"]

# Save/load compiled bitsets to disk
persistence = ["bitset", "dep:bincode", "dep:sha2", "dep:chrono", "dep:serde", "dep:serde_json"]

# Runtime filter service with caching
filter-service = ["dep:parking_lot", "dep:lru"]

# Enable all optimizations
full = ["closure", "bitset", "persistence", "filter-service"]

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

# Benchmarks will be added in Phase 5
# [[bench]]
# name = "closure_bench"
# harness = false
# required-features = ["closure"]
